<resources>
    <string name="app_name">SecureMi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message">gokul has made an emergency call, they screamed for help
    and SHIELD has sent this SOS to you because you are in their Emergency Contacts.
    Please call them immediately.</string>
    <string name="add_trusty_number">Add Trusty Number</string>
    <string name="you_have_no_message">You have no message</string>
    <string name="please_help_me_quickly_i_m_in_danger">Please help me quickly...I\'m in danger</string>
    <string name="add_friend">Add Friend</string>
    <string name="enter_friend_name">Enter Friend Name</string>
    <string name="todo">TODO</string>
    <string name="contrycodewomanimage">ContryCodeWomanImage</string>
    <string name="caller_detail">Caller Detail</string>
    <string name="presets">Presets</string>
    <string name="add_friends">Add Friend</string>
    <string name="enter_friend_number">Enter Friend Number</string>
    <string name="brother">Brother</string>
    <string name="_8411975663">8411975663</string>
    <string name="_00_10">00.10</string>
    <string name="add_call">Add call</string>
    <string name="record">Record</string>
    <string name="vidio">Vidio</string>
</resources>