<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@color/black"
    tools:context="com.GokulBorade.securemi.activities.callActivity1">

    <ImageView
        android:id="@+id/callerImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rimzim" />


    <TextView
        android:id="@+id/callerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/brother"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/callerImage"
        app:layout_constraintStart_toStartOf="@+id/callerImage"
        app:layout_constraintTop_toBottomOf="@+id/callerImage"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/callerNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_8411975663"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="@+id/callerImage"
        app:layout_constraintStart_toStartOf="@+id/callerImage"
        app:layout_constraintTop_toBottomOf="@+id/callerName"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/callTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/_00_10"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/callerImage"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/callerImage"
        app:layout_constraintTop_toBottomOf="@+id/callerNumber"
        tools:ignore="MissingConstraints" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/callTime">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:constraint_referenced_ids="recordButton,vidioButton,addCallButton,speakerButton,dialPadButton,muteButton"
                app:flow_maxElementsWrap="3"
                app:flow_wrapMode="chain"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:id="@+id/recordButton"
                android:layout_width="80dp"
                android:layout_height="88dp"

                android:gravity="center|center_vertical"
                android:orientation="vertical"
                tools:ignore="MissingConstraints,UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView40"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:srcCompat="@drawable/speaker"
                    android:contentDescription="img" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_vertical"

                    android:text="@string/record"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/vidioButton"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:gravity="center|center_vertical"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/imageView35"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:srcCompat="@drawable/vidio2" />

                <TextView
                    android:id="@+id/wind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_vertical"
                    android:text="@string/vidio"
                    android:textColor="@color/white" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/addCallButton"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:gravity="center|center_vertical"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/imageView98"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:srcCompat="@drawable/addcall" />

                <TextView
                    android:id="@+id/condition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_vertical"
                    android:text="@string/add_call"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/speakerButton"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:gravity="center|center_vertical"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/imageView38"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:srcCompat="@drawable/speaker" />

                <TextView
                    android:id="@+id/sunrise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_vertical"
                    android:text="Speaker"
                    android:textColor="@color/white" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/dialPadButton"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:gravity="center|center_vertical"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/imageView68"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:srcCompat="@drawable/keypad" />

                <TextView
                    android:id="@+id/sunset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_vertical"
                    android:text="Dialpad"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/muteButton"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:gravity="center|center_vertical"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/imageView37"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:srcCompat="@drawable/vidio2" />

                <TextView
                    android:id="@+id/sea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_vertical"
                    android:text="Mute"
                    android:textColor="@color/white" />


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <ImageView
        android:id="@+id/callEndButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/callerImage"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="@+id/callerImage"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.688"
        app:srcCompat="@drawable/callend"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>